--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/datetimepicker": "3.0.4",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
+    "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
     "date-fns": "^2.23.0",
