--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/datetimepicker": "3.0.4",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "^5.9.4",
     "@react-navigation/bottom-tabs": "^5.11.10",
+    "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
     "date-fns": "^2.23.0",
     "expo": "~41.0.0",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
+    "expo-notifications": "~0.8.2",
     "expo-status-bar": "~1.0.4",
     "lottie-react-native": "~2.6.1",
     "react": "16.13.1",
